--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
 
         <label class="muted tiny" for="engineSelect" style="margin-top:8px;display:block">Model</label>
         <select id="engineSelect" class="engine" aria-label="Model">
-          <option value="latest" selected>Latest (auto)</option>
-          <option value="model-5-thinking">model-5-thinking</option>
+          <option value="latest" selected>model-5-thinking</option>
+          <option value="model-5-thinking">Latest (auto)</option>
           <option value="model-5">model-5</option>
           <option value="model-4o">model-4o</option>
           <option value="model-4o-mini">model-4o-mini</option>
