--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <aside class="side">
       <div class="side-group">
         <div class="side-title">Navigate</div>
-        <button class="side-link is-active" data-view="chat → Ask Anything">Chat</button>
+        <button class="side-link is-active" data-view="chat">Chat</button>
         <button class="side-link" data-view="image">Text → Image</button>
         <button class="side-link" data-view="video">Text → Video (soon)</button>
         <button class="side-link" data-view="audio">Text → Audio (soon)</button>
